parser/src/tests/corpus/negatives/invalid-let-syntax/expected
Error from "negatives/invalid-let-syntax/input", line 1:
| let {
|     ^
|
+-> Syntax error: while parsing expression, found '{', expected ' ' or '\n'

